--- a/app/src/main/res/layout/incoming_message.xml
+++ b/app/src/main/res/layout/incoming_message.xml
@@ -9,31 +9,31 @@
         android:id="@+id/messageText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/purple_message"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/orange_message"
         android:paddingLeft="8dp"
         android:paddingTop="6dp"
         android:paddingRight="8dp"
         android:paddingBottom="6dp"
         android:text="fhggrfrgthythgrthyhrtgrfhggrfrgthythgrthyhrtgrfhggrfrgthythgrthyhrtgrfhggrfrgthythgrthyhrtgrfhggrfrgthythgrthyhrtgrfhggrfrgthythgrthyhrtgrfhggrfrgthythgrthyhrtgrfhggrfrgthythgrthyhrtgrfhggrfrgthythgrthyhrtgrfhggrfrgthythgrthyhrtgrfhggrfrgthythgrthyhrtgrfhggrfrgthythgrthyhrtgr"
         android:textColor="@android:color/white"
-        app:layout_constraintEnd_toStartOf="@+id/imageView"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/userName" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="92dp"
         android:layout_height="92dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:contentDescription="1233r"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.416"
         app:srcCompat="@drawable/outgoing"
         tools:srcCompat="@drawable/outgoing" />
 
@@ -45,7 +45,7 @@
         android:layout_marginBottom="16dp"
         android:text="12:05:01 1.01.2003"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/messageText"
+        app:layout_constraintStart_toStartOf="@+id/messageText"
         app:layout_constraintTop_toBottomOf="@+id/messageText" />
 
     <TextView
@@ -54,6 +54,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Max"
-        app:layout_constraintEnd_toEndOf="@+id/messageText"
+        app:layout_constraintStart_toStartOf="@+id/messageText"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
